--- a/demo.html
+++ b/demo.html
@@ -1,21 +1,30 @@
-
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>OCR with tesseract.js</title>
-  <base href="/ocr/">
 
-  <meta
-    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    name="viewport">
-  <meta content="telephone=no" name="format-detection">
-  <meta content="no" name="msapplication-tap-highlight">
-  <link href="assets/favicon.png" rel="icon" type="image/png"/>
-  <meta content="yes" name="apple-mobile-web-app-capable"/>
-  <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
+<head>
+    <meta charset="utf-8">
+    <title>OCR with tesseract.js</title>
+
+    <meta content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="no" name="msapplication-tap-highlight">
+    <link href="assets/favicon.png" rel="icon" type="image/png" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="black" name="apple-mobile-web-app-status-bar-style" />
 </head>
+
 <body>
-<app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
+    <app-root></app-root>
+    <script src="runtime-es2015.js" type="module"></script>
+    <script src="polyfills-es2015.js" type="module"></script>
+    <script src="runtime-es5.js" nomodule></script>
+    <script src="polyfills-es5.js" nomodule></script>
+    <script src="styles-es2015.js" type="module"></script>
+    <script src="styles-es5.js" nomodule></script>
+    <script src="vendor-es2015.js" type="module"></script>
+    <script src="main-es2015.js" type="module"></script>
+    <script src="vendor-es5.js" nomodule></script>
+    <script src="main-es5.js" nomodule></script>
+</body>
+
 </html>
