--- a/demo1.html
+++ b/demo1.html
@@ -1,27 +1,66 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>Spotify Web Playback SDK Template</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-
-    <!-- Include the Web Playback SDK -->
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
-
-    <!-- Include our Javascript -->
-    <script src="/script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Basic Usage</title>
 </head>
 
-<body class="container">
-    <h1 class="text-salmon">Spotify Web Playback SDK Template</h1>
-    <h4>This app uses the implicit grant authorization flow to get an access token and initialise the Web Playback SDK. It then uses the Spotify Connect Web API to play a song.</h4>
-    <p>If everything is set up properly, you should hear some music!</p>
-    <img id="current-track" />
-    <h3 id="current-track-name"></h3>
+<body>
+
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.0.1/dist/tesseract.min.js"></script>
+    <script>
+        window.addEventListener('load', function() {
+            document.querySelector('input[type="file"]').addEventListener('change', function() {
+                if (this.files && this.files[0]) {
+                    var img = document.querySelector('img'); // $('img')[0]
+                    img.src = URL.createObjectURL(this.files[0]); // set src to blob url
+                    img.onload = imageIsLoaded;
+                }
+            });
+        });
+
+        function imageIsLoaded() {
+            //alert(this.src); // blob url
+            // update width and height ...
+
+
+
+
+            const exampleImage = this.src; //'https://tesseract.projectnaptha.com/img/eng_bw.png';
+
+            const worker = Tesseract.createWorker({
+                //logger: m => console.log(m)
+            });
+            //Tesseract.setLogging(true);
+            Tesseract.setLogging(false);
+            work();
+
+            async function work() {
+                await worker.load();
+                await worker.loadLanguage('eng');
+                await worker.initialize('eng');
+
+                let result = await worker.detect(exampleImage);
+                //console.log(result.data);
+
+                result = await worker.recognize(exampleImage);
+                //console.log(result.data);
+
+                for (i = 0; i < result.data.lines.length; i++) {
+                    console.log(result.data.lines[i]);
+                }
+
+                //console.log(result.data.lines);
+
+                await worker.terminate();
+            }
+        }
+    </script>
+    <input type='file' />
+    <br><img id="myImg" src="#" alt="your image">
 </body>
 
 </html>
