--- a/SpotifyPowerHour/ph.html
+++ b/SpotifyPowerHour/ph.html
@@ -13,7 +13,7 @@
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
 
     <!-- Include our Javascript -->
-    <script src="/script.js" defer></script>
+    <script src="/phscript.js" defer></script>
 </head>
 
 <body class="container">
