--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -20,6 +20,13 @@
     <h1 class="text-salmon">Spotify Power Hour</h1>
     <img id="current-track" />
     <h3 id="current-track-name"></h3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button type="button">Toggle Playback</button>
+
 </body>
 
 </html>
