--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -25,7 +25,7 @@
     <br>
     <br>
     <br>
-    <button type="button">Toggle Playback</button>
+    <button type="button" onclick="toggle()">Toggle Playback</button>
 
 </body>
 
