--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -25,6 +25,7 @@
     <br>
     <br>
     <br>
+    <button type="button" onclick="start()">Start Playback</button>
     <button type="button" onclick="toggle()">Toggle Playback</button>
 
 </body>
