--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -27,6 +27,12 @@
     <br>
     <button type="button" onclick="start()">Start Playback</button>
     <button type="button" onclick="toggle()">Toggle Playback</button>
+    <br>
+    <form id="playlists">
+        <select id="selectedList">
+            <option>------Select a Playlist------</option>
+        </select>
+    </form>
 
 </body>
 
