--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -29,8 +29,8 @@
     <button type="button" onclick="toggle()">Toggle Playback</button>
     <br>
     <form id="playlists">
-        <select id="selectedList">
-            <option>------Select a Playlist------</option>
+        <select id="playlistsDD">
+            <option value="null">------Select a Playlist------</option>
         </select>
     </form>
 
