--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -17,23 +17,17 @@
 </head>
 
 <body class="container">
-    <h1 class="text-salmon">Spotify Power Hour</h1>
-    <img id="current-track" />
-    <h3 id="current-track-name"></h3>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <button type="button" onclick="start()">Start Playback</button>
-    <button type="button" onclick="toggle()">Toggle Playback</button>
-    <br>
+    <h1 class="text-storm">Spotify Power Hour</h1>
     <form id="playlists">
         <select id="playlistsDD">
             <option value="null">------Select a Playlist------</option>
         </select>
     </form>
-
+    <button type="button" onclick="start()">Start Playback</button>
+    <button type="button" onclick="toggle()">Toggle Playback</button>
+    <br>
+    <img id="current-track" />
+    <h3 id="current-track-name"></h3>
 </body>
 
 </html>
