--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -23,7 +23,7 @@
             <option value="null">------Select a Playlist------</option>
         </select>
     </form>
-    <audio autoplay="false" id="minutemarker" src="/SpotifyPowerHour/beer.mp3"></audio>
+    <audio id="minutemarker" src="/SpotifyPowerHour/beer.mp3"></audio>
     <button type="button" onclick="start()">Start Playback</button>
     <button type="button" onclick="toggle()">Toggle Playback</button>
     <br>
