--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -17,6 +17,17 @@
 </head>
 
 <body class="container">
+    <div id="timerContainer">
+        <div class="timer" onclick="startTimer()">Start Timer!</div>
+        <div class="startTimer reset" onclick="startTimer();start();">
+            <i class="fas fa-play"></i>
+        </div>
+        <div class="pauseTimer reset" onclick="pauseTimer();toggle();">
+            <i class="fas fa-pause"></i>
+        </div>
+        <div class="resetTimer reset" onclick="resetTimer()">Reset</div>
+    </div>
+    <script type="text/javascript" src="/SpotifyPowerHour/stopWatch.js"></script>
     <h1 class="text-storm">Spotify Power Hour</h1>
     <form id="playlists">
         <select id="playlistsDD">
