--- a/SpotifyPowerHour/ph1.html
+++ b/SpotifyPowerHour/ph1.html
@@ -18,7 +18,7 @@
 
 <body class="container">
     <div id="timerContainer">
-        <div class="timer" onclick="startTimer()">Start Timer!</div>
+        <div class="timer" onclick="startTimer();start();">Start Timer!</div>
         <div class="startTimer reset" onclick="startTimer();start();">
             <i class="fas fa-play"></i>
         </div>
